--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,11 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build
-        run: VITE_BASE_URL=${{ secrets.VITE_BASE_URL }} pnpm run build
+        run: pnpm run build
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          VITE_BASE_URL: /mtg-dutch-pauper-league/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
